<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:minHeight="?actionBarSize"
            android:layout_marginTop="40dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp">



                <TextView
                    android:id="@+id/quizMode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/questionTextView"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/questionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/questionNumberText"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:text="Que."
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/questionNumberText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:paddingRight="10dp"
                    android:text="1"
                    android:textSize="20sp" />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/question_poll"
                android:textSize="18sp" />



            <Button
                android:id="@+id/option1"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:text="@string/answer_poll1"/>

            <Button
                android:id="@+id/option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/answer_poll2"
                android:layout_weight="1"
                 />


            <Button
                android:id="@+id/option3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"

                android:text="@string/answer_poll3"/>

            <Button
                android:id="@+id/option4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/answer_poll4"
                android:layout_weight="1"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

        <!--нарисовать самому кнопки-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/previous_question_button"
                android:text="Previous"
                android:textColor="@color/white"
                android:background="@drawable/gradient"
                android:layout_marginEnd="10dp"/>



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/next_question_button"
                android:text="next"
                android:textColor="@color/white"
                android:background="@drawable/gradient"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>